# predictive_hw2

./: HaydenNet.ipynb  Week_9_CNN.ipynb  best_model.pth  best_model4-8-5:14pm.pth  main.py  part1.py  part1pytorch.py  part2.ipynb  part2TRANSFERLEARNING.py  pyproject.toml  rubric.txt  submission.csv  submissionHAYDENNET.csv  submissionIMAGENET.csv  test.gpu.ipynb
